# smart-system-engineering

./: README.md  pyproject.toml
dados/: aed.ipynb  kaggle.json  pipeline_dados.py  scraping.py  trab final.py
esi/: pyproject.toml
modelo/: modelos.py
models_output/: modelo_adult_income.pkl  relatorio_performance.txt
service/: Dockerfile  app.py
src/: adult_limpo.csv  aed.ipynb  breast_cancer.json  kaggle.json  pipeline_dados.py  scraping.py
