[project]
name = "smart-system-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "cbysousa",email = "cibellycastro1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client (>=2.3.0,<3.0.0)",
    "kaggle (>=1.8.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "esi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
